force-app/main/default/objects/EV_CanalesDeComunicacion__c/EV_CanalesDeComunicacion__c.object-meta.xml
<CustomObject>
    <description>Objeto que recoge los canales por los que se tiene que contactar a un cliente, dependiendo del segmento.</description>
    <label>Canales de comunicación</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Canal Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Canales de comunicación</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>