force-app/main/default/objects/EV_CanalesDeComunicacion__c/fields/EV_CanalDeComunicacion2__c.field-meta.xml
<CustomField>
    <fullName>EV_CanalDeComunicacion2__c</fullName>
    <description>Canal secundario por el que se contactará al cliente en caso de ser posible</description>
    <label>Canal de comunicación 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EV_CanalesComunicacion</valueSetName>
    </valueSet>
</CustomField>