force-app/main/default/objects/EV_CanalesDeComunicacion__c/fields/EV_Segmento__c.field-meta.xml
<CustomField>
    <fullName>EV_Segmento__c</fullName>
    <description>Segmento del que se selecciona los canales de comunicación.</description>
    <label>Segmento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BPA</fullName>
                <label>Banca Particulares</label>
            </value>
            <value>
                <fullName>NEG</fullName>
                <label>Negocios</label>
            </value>
            <value>
                <fullName>BPE</fullName>
                <label>Banca Premier</label>
            </value>
            <value>
                <fullName>004</fullName>
                <label>Banca Privada</label>
            </value>
            <value>
                <fullName>EMP</fullName>
                <label>Empresas</label>
            </value>
            <value>
                <fullName>006</fullName>
                <label>Todos</label>
            </value>
            <value>
                <fullName>MIC</fullName>
                <label>Microempresas</label>
            </value>
            <value>
                <fullName>WEALTH</fullName>
                <label>Wealth</label>
            </value>
            <value>
                <fullName>AgroBank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>